--- a/index.html
+++ b/index.html
@@ -6,31 +6,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <div class="header">
-        <h4>Header logo</h4>
+<body id="body">
+    <div class="header-box">
+        <div class="header">
+            <div>Header logo</div>
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
     </div>
-    <div class="container">
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that foes here under the main title. It's smaller gont and the color is lower
-            contrast</p>
-        <button>Sign up</button>
+    <div class="container1">
+        <div class="left-section">
+            <div class="awesome">This website is awesome</div>
+            <p>This website has some subtext that foes here under the main title. It's smaller gont and the color is
+                lower contrast</p>
+            <button class="small-button">Sign up</button>
+        </div>
+        <div class="right-section">
+            <img src="/Users/Guillermo/Desktop/rice.jpg" alt="Image 0">
+        </div>
     </div>
-    <div class="container">
-        <h2> Some random information</h2>
+    <div class="container2">
+        <div class="information"> Some random information</div>
         <ul>
-            <li>This is some subtext under an illustration or image</li>
-            <li>This is some subtext under an illustration or image</li>
-            <li>This is some subtext under an illustration or image</li>
-            <li>This is some subtext under an illustration or image</li>
+            <li class="list-item"><img src="/Users/Guillermo/Desktop/rice.jpg" alt="Image 1"> is some subtext under an illustration or image</li>
+            <li class="list-item"><img src="/Users/Guillermo/Desktop/rice.jpg" alt="Image 2"> is some subtext under an illustration or image</li>
+            <li class="list-item"><img src="/Users/Guillermo/Desktop/rice.jpg" alt="Image 3"> is some subtext under an illustration or image</li>
+            <li class="list-item"><img src="/Users/Guillermo/Desktop/rice.jpg" alt="Image "> is some subtext under an illustration or image</li>
         </ul>
     </div>
-    <div class="container">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
-            people will actually read it. Who knows? All I know is that it looks nice. </p>
-        <p>Thor, God of Thunder</p>
+    <div class="container3">
+        <div class="test">
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
+                people will actually read it. Who knows? All I know is that it looks nice.
+                <br>
+                <span class="name">-Thor, God of Thunder</span>
+        </div>
     </div>
     <div class="footer">
         <h4>Call to action! It's time!</h4>
