Create a webpage from a image provided by The Odin Project.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <div class="awesome">This website is awesome</div>
             <p>This website has some subtext that foes here under the main title. It's smaller gont and the color is
                 lower contrast</p>
-            <button class="small-button">Sign up</button>
+            <br>
+            <button class="header-button">Sign up</button>
         </div>
         <div class="right-section">
             <img src="/Users/Guillermo/Desktop/rice.jpg" alt="Image 0">
@@ -34,23 +35,31 @@
     <div class="container2">
         <div class="information"> Some random information</div>
         <ul>
-            <li class="list-item"><img src="/Users/Guillermo/Desktop/rice.jpg" alt="Image 1"> is some subtext under an illustration or image</li>
-            <li class="list-item"><img src="/Users/Guillermo/Desktop/rice.jpg" alt="Image 2"> is some subtext under an illustration or image</li>
-            <li class="list-item"><img src="/Users/Guillermo/Desktop/rice.jpg" alt="Image 3"> is some subtext under an illustration or image</li>
-            <li class="list-item"><img src="/Users/Guillermo/Desktop/rice.jpg" alt="Image "> is some subtext under an illustration or image</li>
+            <li class="list-item"><img src="/Users/Guillermo/Desktop/rice.jpg" alt="Image 1"> is some subtext under an
+                illustration or image</li>
+            <li class="list-item"><img src="/Users/Guillermo/Desktop/rice.jpg" alt="Image 2"> is some subtext under an
+                illustration or image</li>
+            <li class="list-item"><img src="/Users/Guillermo/Desktop/rice.jpg" alt="Image 3"> is some subtext under an
+                illustration or image</li>
+            <li class="list-item"><img src="/Users/Guillermo/Desktop/rice.jpg" alt="Image "> is some subtext under an
+                illustration or image</li>
         </ul>
     </div>
     <div class="container3">
-        <div class="test">
-            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
-                people will actually read it. Who knows? All I know is that it looks nice.
-                <br>
-                <span class="name">-Thor, God of Thunder</span>
-        </div>
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
+            people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <div class="name">-Thor, God of Thunder</div>
     </div>
-    <div class="footer">
-        <h4>Call to action! It's time!</h4>
-        <p>Sign up for our product by clicking that button right over there! <button>Sign up</button></p>
+    <div class="footer-container">
+        <div class="footer">
+            <div class="footer-left">
+                <h3>Call to action! It's time!</h3>
+                <div>Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <div class="footer-right">
+                <button class="footer-button">Sign up</button>
+            </div>
+        </div>
     </div>
 </body>
 
