Errors were fixed. Actual footer was added, as there was confusion in prior commit.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="container3">
         <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
             people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <div class="name">-Thor, God of Thunder</div>
+        <p class="name">-Thor, God of Thunder</p>
     </div>
     <div class="footer-container">
         <div class="footer">
@@ -60,6 +60,9 @@
                 <button class="footer-button">Sign up</button>
             </div>
         </div>
+    </div>
+    <div class="real-footer">
+        <div>CopyRight @ The Odin Project 2023</div>
     </div>
 </body>
 
