--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
         </ul>
     </div>
     <div class="container3">
+        <div class="quote">
         <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
             people will actually read it. Who knows? All I know is that it looks nice.</p>
         <p class="name">-Thor, God of Thunder</p>
+    </div>
     </div>
     <div class="footer-container">
         <div class="footer">
